syntax = "proto3";

// Generated by the msggen.py message compiler.
message StAccountBaseData{
	string name = 1;
	repeated int32 baseKeys = 2;
	repeated int32 baseDatas = 3;
}

message StLoginSuccess{
	string gameUserid = 1;
	bool isFirst = 2;
	int32 serverTime = 3;
	int32 serverZone = 4;
	StAccountBaseData accountBaseData = 5;
}

enum MessageType {
	SpecialEventInvalid = 0;
	ServerRegister = 1;
	ServerKeepAlive = 2;
	PrepareLoginPlatformUniqueID = 3;
	LoginPlatformUniqueID = 4;
	LoginPlatformSidToken = 5;
	ReLogin = 6;
	Kick = 7;
	EnterGameWorld = 8;
	AgentDisConnect = 9;
	KeepAlive = 10;
	SpecialEventConnect = -1;
	SpecialEventDisConnect = -2;
}

message MsgServerRegister{
	string serverType = 1;
	int32 serverID = 2;
}

message MsgServerKeepAlive{
}

message MsgPrepareLoginPlatformUniqueID{
	string subChannel = 1;
	string platformUserid = 2;
	string gameUserid = 3;
	string randomSalt = 4;
	int32 timestamp = 5;
	int32 status = 6;
	int32 result = 7;
}

message MsgLoginPlatformUniqueID{
	string token = 1;
	string clientGUID = 2;
	StLoginSuccess data = 3;
	int32 result = 4;
}

message MsgLoginPlatformSidToken{
	string token = 1;
	string clientGUID = 2;
	StLoginSuccess data = 3;
	int32 result = 4;
}

message MsgReLogin{
	string token = 1;
	string clientGUID = 2;
	StLoginSuccess data = 3;
	int32 result = 4;
}

message MsgKick{
	int32 result = 1;
}

message MsgEnterGameWorld{
	int32 serverID = 1;
	uint64 UUIDAccount = 2;
	int32 result = 3;
}

message MsgAgentDisConnect{
}

message MsgKeepAlive{
}

